# project_aws_clima

./: .env.example  .gitignore  LICENSE  README.md  buildspec.yml  lambda_function.py  problemas.md  pyproject.toml  troubleshooting.md
climabr/: README.md  buildspec.yml  dbt_project.yml  package-lock.yml  packages.yml
climabr/docs/: overview.md
climabr/macros/: classify_moon_phase.sql  generate_schema_name.sql  macros.md  schema.yml
climabr/models/: source.yml
climabr/models/landing/: landing_clima.sql
climabr/models/marts/: fct_analise_mensal.sql  fct_desvio_previsao.sql  schema.yml
climabr/models/staging/: staging.yml  stg_clima.sql
climabr/seeds/: 7fc58f35-b955-474a-a49e-e5cea50cfa08.csv
docs/: troubleshooting.md
infra/: README.md  app.py  cdk.json
infra/stacks/: codebuild_stack.py  glue_crawler_stack  glue_crawler_stack.py  step_functions_stack.py
reports/: dbt_env_report.json
scripts/: aws_report.py  dbt_env_report.py  run_lambda_local.py  test_visual_crossing_request.py  validation_ingestion_lambda.py
scripts/reports/: aws_report.json  validacao_lambda.json
