[project]
name = "project-aws-clima"
version = "0.1.0"
description = "Pipeline de dados climaticos com AWS Lambda, S3 e Visual Crossing"
authors = [
    {name = "Daniel",email = "f.daniel.m@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "boto3 (>=1.43.24,<2.0.0)",
    "tzdata (>=2026.2,<2027.0)",
    "rich (>=15.0.0,<16.0.0)",
    "dbt-athena-community (>=1.10.1,<2.0.0)"
]
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "ruff (>=0.15.16,<0.16.0)",
    "aws-cdk-lib (>=2.260.0,<3.0.0)",
    "constructs (>=10.6.0,<11.0.0)"
]
